[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Alluet <alluet@alluet.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "^0.2.2"
aoc-runner-derive = "^0.2.2"
regex = "^1.3.1"
linked-hash-map = "^0.5.2"
num = "^0.2.0"
